# pyvast

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap_cli_docs_tests.sh  mkdocs.yaml  mkdocs.yml  pyproject.toml
contrib/ctx/: demo.json
contrib/manifests/: multi_ssp_demo.yml
docs/: architecture.md  cli.md  index.md
patches/: feat-cli-docs__0001.diff  feat-cli-docs__0002.diff  feat-tests__0001.diff
pyvast/: __init__.py  cli.py
pyvast/adapters/: __init__.py  base_http.py  mock.py  registry.py  types.py
pyvast/manifest/: executor.py  loader.py  types.py  utils_param.py
pyvast/tests/: test_adapter.py
pyvast/utils/: event_tracker.py  factories.py  instrumentation.py  macro.py  wrapper_resolver.py
scripts/: apply_patches.py  gen_patches.py
