[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyvast"
version = "0.1.0"
description = "Python VAST (Video Ad Serving Template) library"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "pyvast"}]

[tool.poetry.dependencies]
python = "^3.11"
rich-click = "^1.8.9"
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.30.0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyvast*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
